fix error where game begins in round 6

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Rock, Paper, Scissors</title>
     </head>
     <body>
-        <script src="javascript.js"></script>
+        <script src="javascriptRevised.js"></script>
     </body>
 </html>
