add buttons for prompts instead of input

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock, Paper, Scissors</title>
+        <script src="javascriptRevised.js" defer></script>
     </head>
     <body>
-        <script src="javascriptRevised.js"></script>
+        <button id="rockBtn">Rock</button>
+        <button id="paperBtn">Paper</button>
+        <button id="scissorsBtn">Scissors</button>
     </body>
 </html>
