add display div for choices and results

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <script src="javascriptRevised.js" defer></script>
     </head>
     <body>
-        <button id="rockBtn">Rock</button>
-        <button id="paperBtn">Paper</button>
-        <button id="scissorsBtn">Scissors</button>
+        <div id="choices"></div>
+        <div id="results"></div>
+        <div class="buttons">
+            <button id="rockBtn">Rock</button>
+            <button id="paperBtn">Paper</button>
+            <button id="scissorsBtn">Scissors</button>
+        </div>
     </body>
 </html>
